fix z-index

--- a/src/blocks/content/search/__container/__rect/search__rect.css
+++ b/src/blocks/content/search/__container/__rect/search__rect.css
@@ -1,10 +1,8 @@
 .search__rect{
     width: 100%;
     height: 100%;
-    background: #000000;
-    opacity: 0.5;
+    background: rgba(0, 0, 0, 0.5);
     position: absolute;
     top: 0px;
     left: 0px;
-    z-index: -1;
 }
