--- a/src/blocks/content/search/search.css
+++ b/src/blocks/content/search/search.css
@@ -7,7 +7,6 @@ background-image: url(../../../images/lead.jpg);
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
-z-index: -1;
 display: flex;
 flex-direction: column;
 justify-content: center;
